--- a/homeassistant/components/intellifire/manifest.json
+++ b/homeassistant/components/intellifire/manifest.json
@@ -7,5 +7,6 @@
   "dependencies": [],
   "codeowners": ["@jeeftor"],
   "iot_class": "local_polling",
-  "loggers": ["intellifire4py"]
+  "loggers": ["intellifire4py"],
+  "version": "1.2"
 }
